# bits

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-windows.yml  coverage.yml
cmake/: Options.cmake  UnitTest.cmake  utils.cmake
doc/: Example_Insertion_Extraction.md  Example_Streaming.md
doc/examples/: CMakeLists.txt  Example_TcpIp.cpp  Examples.test.cpp
include/: CMakeLists.txt
include/bits/: BitsDeserializer.h  BitsDeserializer.test.cpp  BitsField.h  BitsField.test.cpp  BitsSerializer.h  BitsSerializer.test.cpp  BitsTraits.h  Enum.h  Enum.test.cpp  Flags.h  Flags.test.cpp  bits.h  bits.test.cpp  bits.test.insert_carray.cpp  bits.test.insert_cpparray.cpp  bits_extraction.carray.test.cpp  bits_extraction.cpparray.test.cpp  bits_extraction.h  bits_insertion.carray.test.cpp  bits_insertion.cpparray.test.cpp  bits_insertion.h  bits_insertion.test.cpp
include/bits/detail/: BaseBitsStream.h  BaseSerialization.h  BitsStream.h  BitsStreamManipulation.h  Deserializer.h  Serializer.h  SkippableBitsStream.h  Traits.h  detail.h  helper_macros.h  infos.h  underlying_integral_type.h
scripts/: install_dependencies.sh
tests/: CMakeLists.txt  test_classes.cpp  test_examples.cpp  test_extract.cpp  test_extract_carray.cpp  test_extract_cpparray.cpp  test_insert.cpp  test_insert_carray.cpp  test_insert_cpparray.cpp
